--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,7 +3,8 @@
 https://mui.com/material-ui/getting-started/installation/
 https://mui.com/material-ui/getting-started/templates/dashboard/
 
+
+
 npm install @mui/material @emotion/react @emotion/styled
-
-
-
+npm install -g serve
+serve -s build
